src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__complex_attribute_names.snap
---
source: src/importer/treetagger/tests.rs
expression: result
---
---- zossen.tt:
<doc Übersicht="false" Attribute-with.hyphen="test" text_structure="true">
Die		
Jugendlichen		
in		
Zossen		
wollen		
ein		
Musikcafé		
.		
</doc>
