src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__disable_attribute_encoding.snap
---
source: src/importer/treetagger/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k4" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::tok-whitespace-before" attr.type="string"/>
    <key id="k6" for="node" attr.name="url" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
[context]
default = 5
sizes = [0, 1, 2, 5, 10]

[view]
page_size = 10

[[visualizers]]
vis_type = "kwic"
display_name = "kwic"
visibility = "permanent"

[[visualizers]]
vis_type = "grid"
display_name = "grid"
]]></data>
        <node id="unescaped_attribute">
            <data key="k3">corpus</data>
        </node>
        <node id="unescaped_attribute/zossen">
            <data key="k1">zossen</data>
            <data key="k3">corpus</data>
            <data key="k6">http://example.com/?a=test&amp;b=notest</data>
        </node>
        <node id="unescaped_attribute/zossen#text">
            <data key="k3">datasource</data>
        </node>
        <node id="unescaped_attribute/zossen#t1">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Die</data>
        </node>
        <node id="unescaped_attribute/zossen#t2">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Jugendlichen</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t3">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">in</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t4">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Zossen</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t5">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">wollen</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t6">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">ein</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t7">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Musikcafé</data>
            <data key="k5"> </data>
        </node>
        <node id="unescaped_attribute/zossen#t8">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">.</data>
            <data key="k5"> </data>
        </node>
        <edge id="e0" source="unescaped_attribute/zossen#t1" target="unescaped_attribute/zossen#t2" label="Ordering/annis/">
        </edge>
        <edge id="e1" source="unescaped_attribute/zossen#t2" target="unescaped_attribute/zossen#t3" label="Ordering/annis/">
        </edge>
        <edge id="e2" source="unescaped_attribute/zossen#t3" target="unescaped_attribute/zossen#t4" label="Ordering/annis/">
        </edge>
        <edge id="e3" source="unescaped_attribute/zossen#t4" target="unescaped_attribute/zossen#t5" label="Ordering/annis/">
        </edge>
        <edge id="e4" source="unescaped_attribute/zossen#t5" target="unescaped_attribute/zossen#t6" label="Ordering/annis/">
        </edge>
        <edge id="e5" source="unescaped_attribute/zossen#t6" target="unescaped_attribute/zossen#t7" label="Ordering/annis/">
        </edge>
        <edge id="e6" source="unescaped_attribute/zossen#t7" target="unescaped_attribute/zossen#t8" label="Ordering/annis/">
        </edge>
        <edge id="e7" source="unescaped_attribute/zossen" target="unescaped_attribute" label="PartOf/annis/">
        </edge>
        <edge id="e8" source="unescaped_attribute/zossen#text" target="unescaped_attribute/zossen" label="PartOf/annis/">
        </edge>
        <edge id="e9" source="unescaped_attribute/zossen#t1" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e10" source="unescaped_attribute/zossen#t2" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e11" source="unescaped_attribute/zossen#t3" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e12" source="unescaped_attribute/zossen#t4" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e13" source="unescaped_attribute/zossen#t5" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e14" source="unescaped_attribute/zossen#t6" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e15" source="unescaped_attribute/zossen#t7" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e16" source="unescaped_attribute/zossen#t8" target="unescaped_attribute/zossen#text" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
