src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__encoding_latin.snap
---
source: src/importer/treetagger/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k3" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k4" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::tok-whitespace-before" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
[context]
default = 5
sizes = [0, 1, 2, 5, 10]

[view]
page_size = 10

[[visualizers]]
vis_type = "kwic"
display_name = "kwic"
visibility = "permanent"

[[visualizers]]
vis_type = "grid"
display_name = "grid"
]]></data>
        <node id="latin1">
            <data key="k3">corpus</data>
        </node>
        <node id="latin1/zossen">
            <data key="k1">zossen</data>
            <data key="k3">corpus</data>
        </node>
        <node id="latin1/zossen#text">
            <data key="k3">datasource</data>
        </node>
        <node id="latin1/zossen#t1">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Die</data>
        </node>
        <node id="latin1/zossen#t2">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Jugendlichen</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t3">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">in</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t4">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Zossen</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t5">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">wollen</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t6">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">ein</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t7">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">Musikcafé</data>
            <data key="k5"> </data>
        </node>
        <node id="latin1/zossen#t8">
            <data key="k2">default_layer</data>
            <data key="k3">node</data>
            <data key="k4">.</data>
            <data key="k5"> </data>
        </node>
        <edge id="e0" source="latin1/zossen#t1" target="latin1/zossen#t2" label="Ordering/annis/">
        </edge>
        <edge id="e1" source="latin1/zossen#t2" target="latin1/zossen#t3" label="Ordering/annis/">
        </edge>
        <edge id="e2" source="latin1/zossen#t3" target="latin1/zossen#t4" label="Ordering/annis/">
        </edge>
        <edge id="e3" source="latin1/zossen#t4" target="latin1/zossen#t5" label="Ordering/annis/">
        </edge>
        <edge id="e4" source="latin1/zossen#t5" target="latin1/zossen#t6" label="Ordering/annis/">
        </edge>
        <edge id="e5" source="latin1/zossen#t6" target="latin1/zossen#t7" label="Ordering/annis/">
        </edge>
        <edge id="e6" source="latin1/zossen#t7" target="latin1/zossen#t8" label="Ordering/annis/">
        </edge>
        <edge id="e7" source="latin1/zossen" target="latin1" label="PartOf/annis/">
        </edge>
        <edge id="e8" source="latin1/zossen#text" target="latin1/zossen" label="PartOf/annis/">
        </edge>
        <edge id="e9" source="latin1/zossen#t1" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e10" source="latin1/zossen#t2" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e11" source="latin1/zossen#t3" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e12" source="latin1/zossen#t4" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e13" source="latin1/zossen#t5" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e14" source="latin1/zossen#t6" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e15" source="latin1/zossen#t7" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e16" source="latin1/zossen#t8" target="latin1/zossen#text" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
