src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__serialize.snap
---
source: src/importer/treetagger/tests.rs
expression: serialization.unwrap()
---
column_names = ["annis::tok", "default_ns::pos", "default_ns::lemma"]
attribute_decoding = "entities"
