src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__serialize_custom.snap
---
source: src/importer/treetagger/tests.rs
expression: serialization.unwrap()
---
column_names = ["a", "b", "c"]
file_encoding = "latin-1"
attribute_decoding = "Entitites"
