src/importer/treetagger/snapshots/annatto__importer__treetagger__tests__single_sentence.snap
---
source: src/importer/treetagger/tests.rs
expression: actual
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="doc" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k3" for="node" attr.name="doc_id" attr.type="string"/>
    <key id="k4" for="node" attr.name="highlighted" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k6" for="node" attr.name="lb" attr.type="string"/>
    <key id="k7" for="node" attr.name="lb_comment" attr.type="string"/>
    <key id="k8" for="node" attr.name="default_ns::lemma" attr.type="string"/>
    <key id="k9" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k10" for="node" attr.name="default_ns::pos" attr.type="string"/>
    <key id="k11" for="node" attr.name="s" attr.type="string"/>
    <key id="k12" for="node" attr.name="s_n" attr.type="string"/>
    <key id="k13" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k14" for="node" attr.name="annis::tok-whitespace-before" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
[context]
default = 5
sizes = [0, 1, 2, 5, 10]

[view]
page_size = 10

[[visualizers]]
vis_type = "kwic"
display_name = "kwic"
visibility = "permanent"

[[visualizers]]
vis_type = "grid"
display_name = "grid"
]]></data>
        <node id="single_sentence">
            <data key="k9">corpus</data>
        </node>
        <node id="single_sentence/zossen">
            <data key="k2">zossen</data>
            <data key="k9">corpus</data>
        </node>
        <node id="single_sentence/zossen#text">
            <data key="k9">datasource</data>
        </node>
        <node id="single_sentence/zossen#t1">
            <data key="k10">ART</data>
            <data key="k13">Die</data>
            <data key="k5">default_layer</data>
            <data key="k8">der</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t2">
            <data key="k10">NN</data>
            <data key="k13">Jugendlichen</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">Jugendliche</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t3">
            <data key="k10">APPR</data>
            <data key="k13">in</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">in</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#span1">
            <data key="k5">default_layer</data>
            <data key="k6">lb</data>
            <data key="k7">There are several &quot;unreadable&quot; characters in that line.</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t4">
            <data key="k10">NE</data>
            <data key="k13">Zossen</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">Zossen</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#span2">
            <data key="k4">highlighted</data>
            <data key="k5">default_layer</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t5">
            <data key="k10">VMFIN</data>
            <data key="k13">wollen</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">wollen</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t6">
            <data key="k10">ART</data>
            <data key="k13">ein</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">ein</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t7">
            <data key="k10">NN</data>
            <data key="k13">Musikcafé</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">Musikcafé</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#t8">
            <data key="k10">$.</data>
            <data key="k13">.</data>
            <data key="k14"> </data>
            <data key="k5">default_layer</data>
            <data key="k8">.</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#span3">
            <data key="k5">default_layer</data>
            <data key="k6">lb</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#span4">
            <data key="k11">s</data>
            <data key="k12">1</data>
            <data key="k5">default_layer</data>
            <data key="k9">node</data>
        </node>
        <node id="single_sentence/zossen#span5">
            <data key="k1">doc</data>
            <data key="k3">example</data>
            <data key="k5">default_layer</data>
            <data key="k9">node</data>
        </node>
        <edge id="e0" source="single_sentence/zossen#span2" target="single_sentence/zossen#t3" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="single_sentence/zossen#span2" target="single_sentence/zossen#t4" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="single_sentence/zossen#span3" target="single_sentence/zossen#t4" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="single_sentence/zossen#span3" target="single_sentence/zossen#t5" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="single_sentence/zossen#span3" target="single_sentence/zossen#t6" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="single_sentence/zossen#span3" target="single_sentence/zossen#t7" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="single_sentence/zossen#span3" target="single_sentence/zossen#t8" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="single_sentence/zossen#span5" target="single_sentence/zossen#t1" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="single_sentence/zossen#span5" target="single_sentence/zossen#t2" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="single_sentence/zossen#span5" target="single_sentence/zossen#t3" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="single_sentence/zossen#span5" target="single_sentence/zossen#t4" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="single_sentence/zossen#span5" target="single_sentence/zossen#t5" label="Coverage/annis/">
        </edge>
        <edge id="e12" source="single_sentence/zossen#span5" target="single_sentence/zossen#t6" label="Coverage/annis/">
        </edge>
        <edge id="e13" source="single_sentence/zossen#span5" target="single_sentence/zossen#t7" label="Coverage/annis/">
        </edge>
        <edge id="e14" source="single_sentence/zossen#span5" target="single_sentence/zossen#t8" label="Coverage/annis/">
        </edge>
        <edge id="e15" source="single_sentence/zossen#span1" target="single_sentence/zossen#t1" label="Coverage/annis/">
        </edge>
        <edge id="e16" source="single_sentence/zossen#span1" target="single_sentence/zossen#t2" label="Coverage/annis/">
        </edge>
        <edge id="e17" source="single_sentence/zossen#span1" target="single_sentence/zossen#t3" label="Coverage/annis/">
        </edge>
        <edge id="e18" source="single_sentence/zossen#span4" target="single_sentence/zossen#t1" label="Coverage/annis/">
        </edge>
        <edge id="e19" source="single_sentence/zossen#span4" target="single_sentence/zossen#t2" label="Coverage/annis/">
        </edge>
        <edge id="e20" source="single_sentence/zossen#span4" target="single_sentence/zossen#t3" label="Coverage/annis/">
        </edge>
        <edge id="e21" source="single_sentence/zossen#span4" target="single_sentence/zossen#t4" label="Coverage/annis/">
        </edge>
        <edge id="e22" source="single_sentence/zossen#span4" target="single_sentence/zossen#t5" label="Coverage/annis/">
        </edge>
        <edge id="e23" source="single_sentence/zossen#span4" target="single_sentence/zossen#t6" label="Coverage/annis/">
        </edge>
        <edge id="e24" source="single_sentence/zossen#span4" target="single_sentence/zossen#t7" label="Coverage/annis/">
        </edge>
        <edge id="e25" source="single_sentence/zossen#span4" target="single_sentence/zossen#t8" label="Coverage/annis/">
        </edge>
        <edge id="e26" source="single_sentence/zossen#t7" target="single_sentence/zossen#t8" label="Ordering/annis/">
        </edge>
        <edge id="e27" source="single_sentence/zossen#t6" target="single_sentence/zossen#t7" label="Ordering/annis/">
        </edge>
        <edge id="e28" source="single_sentence/zossen#t5" target="single_sentence/zossen#t6" label="Ordering/annis/">
        </edge>
        <edge id="e29" source="single_sentence/zossen#t4" target="single_sentence/zossen#t5" label="Ordering/annis/">
        </edge>
        <edge id="e30" source="single_sentence/zossen#t3" target="single_sentence/zossen#t4" label="Ordering/annis/">
        </edge>
        <edge id="e31" source="single_sentence/zossen#t2" target="single_sentence/zossen#t3" label="Ordering/annis/">
        </edge>
        <edge id="e32" source="single_sentence/zossen#t1" target="single_sentence/zossen#t2" label="Ordering/annis/">
        </edge>
        <edge id="e33" source="single_sentence/zossen#t6" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="single_sentence/zossen#t4" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="single_sentence/zossen#t2" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="single_sentence/zossen" target="single_sentence" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="single_sentence/zossen#t7" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="single_sentence/zossen#t3" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="single_sentence/zossen#text" target="single_sentence/zossen" label="PartOf/annis/">
        </edge>
        <edge id="e40" source="single_sentence/zossen#t8" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e41" source="single_sentence/zossen#t5" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
        <edge id="e42" source="single_sentence/zossen#t1" target="single_sentence/zossen#text" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
